--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,29 @@ body {
   margin:  auto;
 }
 
+.swipeView {
+  display: grid;
+  grid-template-columns: repeat(2, 100%);
+  will-change: transform;
+  align-content: center;
+  overflow-x: auto;
+  scroll-snap-coordinate: 0 0;
+  scroll-snap-points-x: repeat(100%);
+  scroll-snap-type: mandatory;
+  -webkit-overflow-scrolling: touch;
+}
+
+section {
+  height: 80vh;
+  scroll-snap-align: start;
+}
+
+.outward {
+}
+
+.return {
+}
+
 button {
   margin-bottom: 5px;
   margin-left:  10px;
@@ -141,4 +164,3 @@ select {
           font-size: 1em;
    }
  }
-
