--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,14 @@ select {
   margin:  20px auto 0 auto;
 }
 
+.nrcc-text {
+  color:  darkred;
+  font-size: 0.8em;
+  text-align: center;
+  width:  90%;
+  margin:  20px auto 0 auto;
+}
+
 .refresh {
   color:  darkred;
   position: absolute;
