--- a/css/styles.css
+++ b/css/styles.css
@@ -83,21 +83,23 @@ p {
   border-radius: 5px;
   height: 30px;
   overflow: hidden;
-  width: 150px;
+  width: 160px;
   background-color: darkgoldenrod;
   color:  white;
   border:  1px solid white;
+  font-size:  1em;
 }
 
 .select-return {
   -webkit-appearance: textfield;
   height: 30px;
   overflow: hidden;
-  width: 150px;
+  width: 160px;
   margin-left:  5px;
   background-color: darkgoldenrod;
   color:  white;
   border:  none;
+  font-size:  1em;
 }
 
 .results {
