--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,22 @@ p {
   text-align: center;
 }
 
+.swipe-right {
+  color:  gold;
+  font-size: 24px;
+  position:  absolute;
+  top:  55px;
+  right:  -20px;
+}
+
+.swipe-left {
+  color:  gold;
+  font-size: 24px;
+  position:  absolute;
+  top:  55px;
+  right:  10px;
+}
+
 .nrcc-message {
   color:  darkred;
   font-size: 0.8em;
